...
                    <navigationItem key="navigationItem" id="Dlq-Ia-smP">
                        <nil key="title"/>
                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="aSY-Vr-qu3">
                            <rect key="frame" x="180" y="7" width="240" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="Scanner Off"/>
                                <segment title="Scanner On"/>
                            </segments>
                            <color key="tintColor" red="0.85098039215686272" green="0.88235294117647056" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="hTP-Wg-xaI" kind="presentation" identifier="showScannerSegue" id="dIo-yY-4Gy"/>
                            </connections>
                        </segmentedControl>
...
                        <connections>
                            <outlet property="dataSource" destination="FrQ-cS-Vky" id="V9p-TQ-WRS"/>
                            <outlet property="delegate" destination="FrQ-cS-Vky" id="8nf-en-Olp"/>
                        </connections>
                    </collectionView>
                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                    <tabBarItem key="tabBarItem" title="Feed" image="feed" id="Z13-z5-dtE"/>
                    <navigationItem key="navigationItem" id="I6U-57-GtQ"/>
                    <connections>
                        <outlet property="emptyLayout" destination="pzV-6p-Mm0" id="lRH-Fl-7YI"/>
                        <outlet property="flowLayout" destination="UZc-XD-LlU" id="QmJ-bw-cXD"/>
                    </connections>
                </collectionViewController>
...
            </objects>
            <point key="canvasLocation" x="-503" y="396"/>
        </scene>
        <!--Detail View Controller-->
        <scene sceneID="PK0-yL-XXL">
            <objects>
                <viewController storyboardIdentifier="DetailViewControllerTablet" useStoryboardIdentifierAsRestorationIdentifier="YES" id="KfD-xb-DfB" customClass="DetailViewController" customModule="hiTour" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="FJg-aS-9P7"/>
                        <viewControllerLayoutGuide type="bottom" id="4EU-dR-lVi"/>
                    </layoutGuides>
                    <view key="view" autoresizesSubviews="NO" contentMode="scaleToFill" id="qjv-G6-uSP">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="32G-ka-mIY">
                                <rect key="frame" x="0.0" y="467" width="600" height="133"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xze-bk-MBB">
                                        <rect key="frame" x="507" y="86" width="69" height="35"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <state key="normal" title="Cancel"/>
                                        <connections>
                                            <action selector="dismissDialog:" destination="hTP-Wg-xaI" eventType="touchUpInside" id="gcO-Ae-aIw"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a passphrase" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kw2-Lo-pDi">
                                        <rect key="frame" x="24" y="32" width="552" height="40"/>
                                        <color key="backgroundColor" red="0.85098039219999999" green="0.88235294119999996" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="fUQ-dW-0bk"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
...
