...
            <point key="canvasLocation" x="-1681" y="497"/>
        </scene>
        <!--Scanner-->
        <scene sceneID="577-QZ-Eby">
            <objects>
                <navigationController id="dBZ-o0-rIm" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Scanner" image="qrcode" id="2Sh-z9-VGi"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="aEU-NG-n56">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                    </navigationBar>
                    <connections>
...
            <point key="canvasLocation" x="-724.5" y="398"/>
        </scene>
        <!--Tours-->
        <scene sceneID="GEj-ge-44D">
            <objects>
                <navigationController id="cdo-Be-tem" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Tours" image="tours" id="1Tt-21-v6o"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="XyQ-eM-RHW">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                    </navigationBar>
                    <connections>
...
            <point key="canvasLocation" x="43" y="1060"/>
        </scene>
        <!--Feed-->
        <scene sceneID="FsQ-4o-GcT">
            <objects>
                <navigationController id="OXW-Bp-Viq" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Feed" image="feed" id="Ao6-iI-nOy"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="Z4V-uK-iD5">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                    </navigationBar>
                    <connections>
...
                                <rect key="frame" x="0.0" y="64" width="600" height="300"/>
                                <color key="backgroundColor" red="0.19607843137254902" green="0.19607843137254902" blue="0.19607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DKA-nn-XcZ">
                                <rect key="frame" x="20" y="384" width="560" height="71"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a passphrase" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fxb-cA-wp5">
                                        <rect key="frame" x="8" y="21" width="426" height="30"/>
                                        <color key="backgroundColor" red="0.85098039219999999" green="0.88235294119999996" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="dKq-rH-sgw">
                                                <variation key="widthClass=compact" constant="40"/>
                                            </constraint>
...
