...
            output.metadataObjectTypes = [AVMetadataObjectTypeQRCode]
            output.setMetadataObjectsDelegate(self, queue: dispatch_get_main_queue())
        }
        catch {
            print("Error With Input Device")
            errorAlert = UIAlertController()
            errorAlert.title = "Input Device Error"
            errorAlert.message = "There appears to be a problem with the camera. Please check the app has permission and try again"
            let errorAlertOkAction = UIAlertAction(title: "Ok", style: UIAlertActionStyle.Default) {
                action in self.errorAlert.dismissViewControllerAnimated(true, completion: nil)
            }
            errorAlert.addAction(errorAlertOkAction)
        }
        
        // Notify when a keyboard appears/disappears from the screen.
...
