...
        
        guard let t = tour else {
            return cell
        }
        
        if indexPath.row >= t.pointTours?.count {
            cell.labelTitle.text = "Feedback Quiz"
            cell.imageViewFeed.image = UIImage(named: "quizicon")
            cell.imageViewFeed.contentMode = .ScaleAspectFit
            cell.imageViewFeed.backgroundColor = UIColor.init(colorLiteralRed: 255/255.0, green: 203/255.0, blue: 135/255.0, alpha: 1)
            
            let allDiscovered = areAllPointsDiscovered()
            cell.transparentView.hidden = allDiscovered
...
